exports[`triangle should default to a transparent background when not passed a backgroundColor 1`] = `
Object {
  "borderColor": "transparent",
  "borderLeftColor": "red",
  "borderStyle": "solid",
  "borderWidth": "5px 0 5px 20px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should generate a proper triangle when passed all parameters 1`] = `
Object {
  "borderColor": "black",
  "borderLeftColor": "red",
  "borderStyle": "solid",
  "borderWidth": "5px 0 5px 20px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should generate a proper triangle when passed string values for height and width 1`] = `
Object {
  "borderColor": "black",
  "borderLeftColor": "red",
  "borderStyle": "solid",
  "borderWidth": "5px 0 5px 20px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should properly render bottom pointing arrow with red foregroundColor, width of 20px and height 20px 1`] = `
Object {
  "borderColor": "transparent",
  "borderStyle": "solid",
  "borderTopColor": "red",
  "borderWidth": "20px 5px 0 5px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should properly render left pointing arrow with blue foregroundColor, width of 10px and height 20px 1`] = `
Object {
  "borderColor": "transparent",
  "borderRightColor": "blue",
  "borderStyle": "solid",
  "borderWidth": "10px 10px 10px 0",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should properly render right pointing arrow with width of 20px and height 10px 1`] = `
Object {
  "borderColor": "transparent",
  "borderLeftColor": "red",
  "borderStyle": "solid",
  "borderWidth": "5px 0 5px 20px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should properly render top pointing arrow with green foregroundColor, width of 20px and height 20px 1`] = `
Object {
  "borderBottomColor": "green",
  "borderColor": "transparent",
  "borderStyle": "solid",
  "borderWidth": "0 10px 20px 10px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should throw an error when not passed a foregroundColor 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/triangle.js --%c

triangle %cexpects a 4th parameter of type string. However, you did not pass one.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#triangle%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`triangle should throw an error when not passed a height 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/triangle.js --%c

triangle %cexpects a 2nd parameter of type string. However, you did not pass one.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#triangle%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`triangle should throw an error when not passed a pointingDirection 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/triangle.js --%c

triangle %cexpects a 1st parameter of type string. However, you did not pass one.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#triangle%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`triangle should throw an error when not passed a width 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/triangle.js --%c

triangle %cexpects a 3rd parameter of type string. However, you did not pass one.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#triangle%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`triangle should throw an error when not passed any parameters 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/triangle.js --%c

triangle %cexpects a 1st parameter of type string. However, you did not pass one.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#triangle%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
  Array [
    "%c ✨ ERROR ✨ ---- mixins/triangle.js --%c

triangle %cexpects a 2nd parameter of type string. However, you did not pass one.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#triangle%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
  Array [
    "%c ✨ ERROR ✨ ---- mixins/triangle.js --%c

triangle %cexpects a 3rd parameter of type string. However, you did not pass one.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#triangle%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
  Array [
    "%c ✨ ERROR ✨ ---- mixins/triangle.js --%c

triangle %cexpects a 4th parameter of type string. However, you did not pass one.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#triangle%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`triangle should throw an error when passed a non-string value for foregroundColor 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/triangle.js --%c

triangle %cexpects a 4th parameter of type string. However, you passed true(boolean) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#triangle%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`triangle should throw an error when passed a non-string value for height 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/triangle.js --%c

triangle %cexpects a 2nd parameter of type string. However, you passed 10(number) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#triangle%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`triangle should throw an error when passed a non-string value for pointingDirection 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/triangle.js --%c

triangle %cexpects a 1st parameter of type string. However, you passed true(boolean) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#triangle%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`triangle should throw an error when passed a non-string value for width 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/triangle.js --%c

triangle %cexpects a 3rd parameter of type string. However, you passed 10(number) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#triangle%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`triangle should throw an error when passed an invalid height 1`] = `Array []`;

exports[`triangle should throw an error when passed an invalid width 1`] = `Array []`;
